--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,8 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+#ramka { border: 2px solid black; border-radius: 5px 10px 5px 10px; }
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
